--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,7 +1,7 @@
 .portfolio {
   text-align: center;
 }
-.portfolio_modal-btn {
+.portfolio_button {
   padding: 6px 22px;
   font-family: var(--main-font);
   cursor: pointer;
