--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -89,7 +89,7 @@
   padding: 0;
   overflow: hidden;
 
-  &:checked + .form_checkbox-label::before {
+  &:checked + .form_checkbox--label::before {
     background-color: var(--accent-color);
     background-image: url(../img/check.svg);
     background-size: 13px 10px;
@@ -101,7 +101,7 @@
   }
 }
 
-.form_checkbox-label {
+.form_checkbox--label {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,10 +126,10 @@
     border-color: var(--accent-color);
   }
 }
-.form_checkbox-link {
+.form_checkbox--link {
   color: var(--accent-color);
 }
-.backdrop-btn {
+.backdrop_btn {
   align-self: center;
   width: 200px;
   height: 50px;
