--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -31,7 +31,7 @@
   border-radius: 4px;
   transition: var(--main-duration) var(--timing-function);
 }
-.close-button {
+.backdrop_button--close {
   position: absolute;
   display: flex;
   top: 8px;
