--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -3,13 +3,13 @@
   flex-direction: column;
 }
 
-.form_field {
+.form__field {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
 }
 
-.form_label {
+.form__label {
   display: block;
   margin-bottom: 4px;
   font-weight: 400;
@@ -18,10 +18,10 @@
   letter-spacing: 0.01em;
   color: #757575;
 }
-.form_box {
+.form__box {
   position: relative;
 }
-.form_input {
+.form__input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -40,23 +40,23 @@
   }
 }
 
-.form_icon {
+.form__icon {
   position: absolute;
   top: 50%;
   left: 13px;
   transform: translateY(-50%);
   transition: var(--main-duration);
 
-  .form_input:hover + &,
-  .form_input:focus + & {
+  .form__input:hover + &,
+  .form__input:focus + & {
     fill: var(--accent-color);
   }
 }
 
-.form_field.comment {
+.form__field.comment {
   margin-bottom: 20px;
 }
-.form_comment {
+.form__comment {
   width: 100%;
   padding: 16px 12px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -80,7 +80,7 @@
   }
 }
 
-.form_checkbox {
+.form__checkbox {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -89,7 +89,7 @@
   padding: 0;
   overflow: hidden;
 
-  &:checked + .form_checkbox--label::before {
+  &:checked + .form__checkbox--label::before {
     background-color: var(--accent-color);
     background-image: url(../img/check.svg);
     background-size: 13px 10px;
@@ -101,7 +101,7 @@
   }
 }
 
-.form_checkbox--label {
+.form__checkbox--label {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -122,14 +122,14 @@
     cursor: pointer;
     margin-right: 7px;
   }
-  .form_checkbox:focus + &::before {
+  .form__checkbox:focus + &::before {
     border-color: var(--accent-color);
   }
 }
-.form_checkbox--link {
+.form__checkbox--link {
   color: var(--accent-color);
 }
-.backdrop_btn {
+.backdrop__btn {
   align-self: center;
   width: 200px;
   height: 50px;
