--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,7 +9,7 @@
   padding-top: 200px;
   padding-bottom: 200px;
 }
-.hero_title {
+.hero__title {
   margin: 0 auto;
   font-weight: 900;
   font-size: 44px;
